; ModuleID = '/home/carl/AnghaBench/jq/src/extr_compile.c_gen_const.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_compile.c_gen_const.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@LOADK = common dso_local global i32 0, align 4
@OP_HAS_CONSTANT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gen_const(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_7__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @LOADK, align 4
  %5 = call %struct.TYPE_8__* @opcode_describe(i32 %4)
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @OP_HAS_CONSTANT, align 4
  %9 = and i32 %7, %8
  %10 = call i32 @assert(i32 %9)
  %11 = load i32, i32* @LOADK, align 4
  %12 = call %struct.TYPE_7__* @inst_new(i32 %11)
  store %struct.TYPE_7__* %12, %struct.TYPE_7__** %3, align 8
  %13 = load i32, i32* %2, align 4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  store i32 %13, i32* %16, align 4
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %18 = call i32 @inst_block(%struct.TYPE_7__* %17)
  ret i32 %18
}

declare dso_local i32 @assert(i32) #1

declare dso_local %struct.TYPE_8__* @opcode_describe(i32) #1

declare dso_local %struct.TYPE_7__* @inst_new(i32) #1

declare dso_local i32 @inst_block(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
